// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`should render correctly no devices 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 415px;"
        >
          <div
            style="outline: none;"
            tabindex="0"
          >
            <div
              class="ant-modal-content"
            >
              <div
                class="ant-modal-header"
              >
                <div
                  class="ant-modal-title"
                  id="test-id"
                >
                  Select a machine
                </div>
              </div>
              <div
                class="ant-modal-body"
              >
                <div
                  class="device-list"
                >
                  <ul>
                    <div
                      aria-busy="true"
                      aria-live="polite"
                      class="ant-spin ant-spin-spinning spinner css-dev-only-do-not-override-hash"
                    >
                      <span
                        aria-label="loading"
                        class="anticon anticon-loading anticon-spin icon ant-spin-dot"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="loading"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="0 0 1024 1024"
                          width="1em"
                        >
                          <path
                            d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                          />
                        </svg>
                      </span>
                    </div>
                  </ul>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`should render correctly no devices 2`] = `
<body>
  <div />
  <div>
    <div
      class="ant-modal-root css-dev-only-do-not-override-hash"
    >
      <div
        class="ant-modal-mask"
      />
      <div
        class="ant-modal-wrap ant-modal-centered"
        tabindex="-1"
      >
        <div
          aria-labelledby="test-id"
          aria-modal="true"
          class="ant-modal css-dev-only-do-not-override-hash ant-zoom-appear ant-zoom-appear-prepare ant-zoom"
          role="dialog"
          style="width: 415px;"
        >
          <div
            style="outline: none;"
            tabindex="0"
          >
            <div
              class="ant-modal-content"
            >
              <div
                class="ant-modal-header"
              >
                <div
                  class="ant-modal-title"
                  id="test-id"
                >
                  Select a machine
                </div>
              </div>
              <div
                class="ant-modal-body"
              >
                <div
                  class="device-list"
                >
                  <ul>
                    <li
                      class=""
                      data-testid="serial"
                    >
                      <label
                        class="name"
                      >
                        name
                      </label>
                      <label
                        class="status grey"
                      >
                        Initiating
                         
                      </label>
                      <label
                        class="connection-type"
                      >
                        <svgr-url />
                      </label>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width: 0px; height: 0px; overflow: hidden; outline: none;"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
